# colloidal_gel_kMC

./: .Grid.txt.swp  .gitignore  .trial.mol2.swo  CMakeLists.txt  Makefile  NANOROD  Readme.md  Rotation (1).ipynb  Rotation.ipynb  a.out  aggregate.h  bond.h  colloidgel  config.h.in  energies.h  grid.h  hbond.h  main.cpp  mc.cpp  mc.h  molecule.h  my.e2238392  my.o2240894  nanorod_Dump.lammpstrj  particle.h  quarternion.cpp  quarternion.h  run.sh  structure_factor.ipynb  system.cpp  system.h  tacc_run.sh  utils.cpp  utils.h  xyz.h
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
MPM_traj/: irreversible_gel_salt_rigid_0.900_volumefraction_0.06_time_100_101.txt  irreversible_gel_salt_rigid_0.900_volumefraction_0.06_time_200_201.txt  irreversible_gel_salt_rigid_0.900_volumefraction_0.06_time_300_301.txt  irreversible_gel_salt_rigid_0.900_volumefraction_0.06_time_400_401.txt  irreversible_gel_salt_rigid_0.900_volumefraction_0.06_time_500_501.txt  irreversible_gel_salt_rigid_0.900_volumefraction_0.06_time_600_601.txt  irreversible_gel_salt_rigid_0.900_volumefraction_0.06_time_700_701.txt  irreversible_gel_salt_rigid_0.900_volumefraction_0.06_time_800_801.txt  irreversible_gel_salt_rigid_0.900_volumefraction_0.06_time_900_901.txt  irreversible_gel_salt_rigid_1.700_volumefraction_0.06_time_100_101.txt  irreversible_gel_salt_rigid_1.700_volumefraction_0.06_time_200_201.txt  irreversible_gel_salt_rigid_1.700_volumefraction_0.06_time_300_301.txt  irreversible_gel_salt_rigid_1.700_volumefraction_0.06_time_400_401.txt  irreversible_gel_salt_rigid_1.700_volumefraction_0.06_time_500_501.txt  irreversible_gel_salt_rigid_1.700_volumefraction_0.06_time_600_601.txt  irreversible_gel_salt_rigid_1.700_volumefraction_0.06_time_700_701.txt  irreversible_gel_salt_rigid_1.700_volumefraction_0.06_time_800_801.txt  irreversible_gel_salt_rigid_1.700_volumefraction_0.06_time_900_901.txt  irreversible_gel_salt_rigid_3.000_volumefraction_0.06_time_100_101.txt  irreversible_gel_salt_rigid_3.000_volumefraction_0.06_time_200_201.txt  irreversible_gel_salt_rigid_3.000_volumefraction_0.06_time_300_301.txt  irreversible_gel_salt_rigid_3.000_volumefraction_0.06_time_400_401.txt  irreversible_gel_salt_rigid_3.000_volumefraction_0.06_time_500_501.txt  irreversible_gel_salt_rigid_3.000_volumefraction_0.06_time_600_601.txt  irreversible_gel_salt_rigid_3.000_volumefraction_0.06_time_700_701.txt  irreversible_gel_salt_rigid_3.000_volumefraction_0.06_time_800_801.txt  (+38 more)
tests/: CMakeLists.txt
(+29 files in other folders)
